tests/conc/reject/parfor_step.ty
fn main():
    acc := 0
    parallel for i in range(0, 10, 2):
        acc = acc + i
